3378 FIX Fixed too long contact group names overflowing WATO folders

--- a/web/htdocs/wato.css
+++ b/web/htdocs/wato.css
@@ -404,8 +404,7 @@ table.validationerror img {
     position: absolute;
     bottom: 23px;
     left: 20px;
-    width: 140px;
-    width: 1140px;
+    right: 20px;
     color: #bde;
     overflow:hidden;
     white-space: nowrap;
